--- a/build.gradle
+++ b/build.gradle
@@ -1,50 +1,50 @@
 buildscript {
-	allprojects {
-		gradle.projectsEvaluated {
-			allprojects {
-				jar { enabled = true }
-			}
-		}
-	}
+    allprojects {
+        gradle.projectsEvaluated {
+            allprojects {
+                jar { enabled = true }
+            }
+        }
+    }
 }
 
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '3.2.5'
-	id 'io.spring.dependency-management' version '1.1.4'
+    id 'java'
+    id 'org.springframework.boot' version '3.2.5'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 allprojects {
-	group = 'com.example'
-	version = '0.0.1-SNAPSHOT'
-	repositories {
-		mavenCentral()
-	}
-	apply plugin: 'java'
-	apply plugin: 'idea'
-	apply plugin: 'java-library'
-	apply plugin: "org.springframework.boot"
-	apply plugin: "io.spring.dependency-management"
-	bootJar {
-		enabled = false
-	}
+    group = 'com.example'
+    version = '0.0.1-SNAPSHOT'
+    repositories {
+        mavenCentral()
+    }
+    apply plugin: 'java'
+    apply plugin: 'idea'
+    apply plugin: 'java-library'
+    apply plugin: "org.springframework.boot"
+    apply plugin: "io.spring.dependency-management"
+    bootJar {
+        enabled = false
+    }
 }
 
 subprojects {
-	sourceCompatibility = '17'
-	dependencies {
-		implementation 'org.springframework.boot:spring-boot-starter-web'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    sourceCompatibility = '17'
+    dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-		implementation 'com.alibaba:fastjson:2.0.33'
-		implementation 'org.projectlombok:lombok:1.18.30'
-		annotationProcessor 'org.projectlombok:lombok:1.18.30'
-		//mybatis-plus
-		implementation 'com.baomidou:mybatis-plus-spring-boot3-starter:3.5.6'
-		runtimeOnly 'com.mysql:mysql-connector-j'
-		//redis
-		implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.5'
-		//rabbitmq
-		implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.0'
-	}
+        implementation 'com.alibaba:fastjson:2.0.33'
+        implementation 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
+        //mybatis-plus
+        implementation 'com.baomidou:mybatis-plus-spring-boot3-starter:3.5.6'
+        runtimeOnly 'com.mysql:mysql-connector-j'
+        //redis
+        implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.5'
+        //rabbitmq
+        implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.0'
+    }
 }
