--- a/build.gradle
+++ b/build.gradle
@@ -46,5 +46,7 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.2.5'
         //rabbitmq
         implementation 'org.springframework.boot:spring-boot-starter-amqp:3.1.0'
+        //websocket
+        implementation 'org.springframework.boot:spring-boot-starter-websocket:3.3.0'
     }
 }
